# NPI-Client

./: CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: main.cpp
